[package]
name = "radwars"
version = "0.1.0"
authors = ["Dmajster <domen.rostohar98@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
bevy = { version = "0.4" }
bevy_rapier3d = { version = "*", features = [ "simd-stable", "parallel" ] }
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3.1"
steamworks = { git = "https://github.com/Thinkofname/steamworks-rs", rev = "4d91f19", features = ["serde"], optional = true }

[features]
server = []
steam = ["steamworks"]