[package]
name = "radwars"
version = "0.1.0"
authors = ["Dmajster <domen.rostohar98@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
bevy = { git = "https://github.com/bevyengine/bevy" }
bevy_rapier3d = { git = "https://github.com/alec-deason/bevy_rapier", branch = "tracking_changes_for_bevy_0.5", features = ["simd-stable","parallel"] }
#bevy_egui = { git = "https://github.com/mvlabat/bevy_egui", branch = "bevy-0.5" }
bevy_egui = { git = "https://github.com/jakobhellermann/bevy_egui/", branch = "bevy-0.5" }

serde = { version = "1.0", features = ["derive"] }
bincode = "1.3.1"
steamworks = { git = "https://github.com/Thinkofname/steamworks-rs", rev = "4d91f19", features = ["serde"], optional = true }

[features]
server = []
steam = ["steamworks"]


