[package]
name = "radwars"
version = "0.1.0"
authors = ["Dmajster <domen.rostohar98@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
bevy = "0.5"
bevy_egui = "0.4"

bevy_rapier3d = "0.9"
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3.1" #used for network communication
steamworks = { version = "0.7.0", features = ["serde"], optional = true }

nalgebra = {version = "0.25", features = ["convert-glam"]} # glam Vec3 to nalgebra Vec3 conversion https://github.com/dimforge/bevy_rapier/issues/50

[features]
server = []
steam = ["steamworks"]

